--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"webpack-cli": "^4.10.0"
 	},
 	"dependencies": {
+		"@vscode/webview-ui-toolkit": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	}
