--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
 					"dc"
 				],
 				"extensions": [
-					".env"
+					".env",
+					".env.example",
+					".env.development",
+					".env.production",
+					".env.test"
 				]
 			}
 		],
